welcome.lessons.welcome.bat.bool1.HasTeen.scala.error
hasTeen:7: error: '(' expected but '{' found.
	{
        ^hasTeen:36: error: illegal start of simple expression
}
^hasTeen:37: error: Unmatched closing brace '}' ignored here
	}
        ^